--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -22,6 +22,9 @@ li {
 
 body {
     font-family: 'Quicksand', sans-serif;
+    font-size: 16px;
+    color: #555555;
+    font-weight: 400;
 }
 
 .container {
