--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -51,6 +51,16 @@
         background-color: $blue;
         border-radius: 18px;
         margin-right: 50px;
+        transition: all .3s;
+
+        &:hover {
+            background-color: transparent;
+            border: 1px solid $blue;
+
+            a {
+                color: $blue;
+            }
+        }
     }
 }
 
@@ -197,14 +207,162 @@
 
                 &::before {
                     position: absolute;
-                    top: 17px;
-                    right: 27px;
+                    top: 16px;
+                    right: 25px;
                 }
             }
         }
-
-
     }
 }
 
 //end header
+
+//start search
+
+.search {
+    height: 726px;
+    background-image: linear-gradient(to left, #0030de 0%, #2e5afb 100%);
+
+    &__inner {
+        color: #f3f3f8;
+        padding-top: 185px;
+        text-align: center;
+
+        &-title {
+            text-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+            font-size: 60px;
+            margin-bottom: 38px;
+
+            span {
+                font-weight: 700;
+                display: block;
+            }
+        }
+
+        &-text {
+            font-size: 20px;
+            line-height: 72px;
+            margin-bottom: 68px;
+        }
+
+        &-box {
+            margin-bottom: 206px;
+
+            a {
+                color: #ffffff;
+                font-size: 16px;
+                padding: 20px 32px;
+                border: 1px solid #fff;
+                border-radius: 28px;
+                transition: all .3s;
+
+                &+a {
+                    margin-left: 30px;
+                }
+
+                &:hover {
+                    color: $blue;
+                    background-color: #ffffff;
+                }
+            }
+        }
+    }
+
+    &__select {
+        position: relative;
+        margin-bottom: 120px;
+
+        &::before,
+        &::after {
+            content: "";
+            position: absolute;
+            height: 100px;
+            border-radius: 6px;
+            background-color: #ffffff;
+            opacity: 0.5;
+            z-index: 0;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        &::before {
+            top: 23px;
+            width: 1080px;
+        }
+
+        &::after {
+            top: 36px;
+            width: 1110px;
+        }
+
+        form {
+            max-width: 1140px;
+            height: 135px;
+            text-align: center;
+            padding: 40px;
+            background-color: #ffffff;
+            border-radius: 6px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+            position: relative;
+            margin: 0 auto;
+            display: flex;
+            margin-top: -102px;
+            z-index: 2;
+
+            & input {
+                width: 615px;
+                height: 55px;
+                padding-left: 29px;
+                padding-right: 50px;
+                border-radius: 4px;
+                border: 1px solid #dcdcdc;
+                outline: none;
+                margin-right: 225px;
+                position: relative;
+            }
+
+            select {
+                width: 194px;
+                height: 55px;
+                border-radius: 4px;
+                border: 1px solid #dcdcdc;
+                padding-left: 20px;
+                padding-right: 30px;
+                position: absolute;
+                right: 306px;
+                bottom: 40px;
+                outline: none;
+            }
+
+            &::before {
+                content: "\e874";
+                position: absolute;
+                right: 324px;
+                bottom: 59px;
+                color: #676767;
+                font-size: 12px;
+                font-family: 'Linearicons-Free';
+                z-index: 1;
+            }
+
+            button {
+                padding: 21px 67px;
+                background-color: $blue;
+                outline: none;
+                border: none;
+                border-radius: 4px;
+                color: #fff;
+                white-space: nowrap;
+                cursor: pointer;
+            }
+        }
+    }
+}
+
+select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
+//end search
