--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -370,6 +370,7 @@ select {
 
 .advantages {
     margin-top: 186px;
+    margin-bottom: 120px;
 
     &__items {
         display: flex;
@@ -405,3 +406,198 @@ select {
 }
 
 //end advantages 
+
+//start weekly-products 
+
+.weekly-products {
+    background-color: $bg;
+    padding: 120px 0;
+
+    &__title {
+        background-color: #ffffff;
+        padding: 40px 0 40px 29px;
+        box-shadow: 0 2px 4px rgba(108, 111, 115, 0.1);
+        border-radius: 4px;
+        margin-bottom: 50px;
+        position: relative;
+
+        &::after {
+            content: "";
+            position: absolute;
+            border-radius: 23px;
+            background-color: #7347c1;
+            width: 110px;
+            height: 45px;
+            right: 30px;
+            top: 34px;
+        }
+    }
+}
+
+.slider__item {
+    display: flex !important;
+    height: 450px;
+
+    &-img {
+        min-height: 450px;
+    }
+
+    &-content {
+        padding: 50px 60px 25px 50px;
+        box-shadow: 0 2px 30px rgba(147, 155, 168, 0.1);
+        border-radius: 4px;
+        background-color: #ffffff;
+    }
+
+    &-title {
+        font-size: 24px;
+        font-weight: 500;
+        color: #000000;
+        margin-bottom: 15px;
+    }
+
+    &-info {
+        display: flex;
+        align-items: center;
+        margin-bottom: 34px;
+        font-size: 15px;
+    }
+
+    &-author {
+        color: #000000;
+        display: flex;
+        align-items: center;
+        margin-right: 21px;
+
+        span {
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            display: inline-block;
+            margin-right: 9px;
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+        }
+    }
+
+    &-system {
+        display: flex;
+        align-items: center;
+
+        span {
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            display: inline-block;
+            width: 16px;
+            height: 16px;
+            margin-right: 9px;
+        }
+
+        color: #7347c1;
+        position: relative;
+    }
+
+    &-text {
+        margin-bottom: 40px;
+        margin-top: 0;
+    }
+
+    &-category {
+        padding-bottom: 44px;
+        border-bottom: 1px solid #ececec;
+        margin-bottom: 23px;
+
+        a {
+            padding: 7px 18px 8px;
+            border-radius: 14px;
+            background-color: #f1f3f6;
+            font-size: 15px;
+            color: #868c96;
+
+            &+a {
+                margin-right: 7px;
+            }
+        }
+    }
+
+    &-rating {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+
+.money-range {
+    font-size: 15px;
+    color: #ffffff;
+    font-weight: 500;
+    padding: 9px 18px;
+    background-color: $blue;
+    border-radius: 32px;
+    margin-right: 19px;
+}
+
+.slider__item-list {
+    span {
+        padding-left: 24px;
+        font-size: 15px;
+        position: relative;
+        margin-right: 19px;
+
+        &::before {
+            content: "\e813";
+            position: absolute;
+            font-size: 15px;
+            color: #7347c1;
+            font-family: 'Linearicons-Free';
+            top: 2px;
+            left: 0;
+        }
+    }
+}
+
+.slider__item-cart {
+    padding-left: 24px;
+    color: $blue;
+    position: relative;
+
+    &::before {
+        content: "\e82e";
+        position: absolute;
+        font-size: 15px;
+        color: $blue;
+        font-family: 'Linearicons-Free';
+        top: 1px;
+        left: 0;
+    }
+
+}
+
+.slick-arrow {
+    border: none;
+    outline: none;
+    position: absolute;
+    color: #fff;
+    font-size: 14px;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.slick-prev {
+    top: -116px;
+    right: 93px;
+}
+
+.slick-next {
+    top: -116px;
+    right: 50px;
+}
+
+
+// .lnr-chevron-left:before,
+// .lnr-chevron-right:before {
+
+
+//end weekly-products
